--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -1,27 +1,28 @@
-name: Voyage Sorgun Bot
+name: ETS Voyage Sorgun Bot
 
 on:
   schedule:
-    - cron: "0 7 * * *"  # Her gün sabah 07:00 UTC (Türkiye saati 10:00)
-  workflow_dispatch:      # Elle çalıştırabilmek için
+    - cron: "0 7 * * *"   # Her gün sabah 07:00 UTC (~Türkiye saati 10:00)
+  workflow_dispatch:        # Elle çalıştırmak için
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Kodları çek
+      - name: Kodları indir
         uses: actions/checkout@v3
 
-      - name: Python kur
+      - name: Python kurulumu
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      - name: Gerekli kütüphaneleri kur
-        run: pip install requests beautifulsoup4
+      - name: Bağımlılıkları kur
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
 
       - name: Botu çalıştır
         run: |
-          BOT_TOKEN="8064693875:AAFEHpkHFMTnqPno2gZB19FHAbyCMVtmWGQ" \
-          CHAT_ID="-1002950043362" \
-          python voyage_bot.py
+          python bot.py
