--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -1,28 +1,34 @@
-name: ETS Voyage Sorgun Bot
+name: Voyage Bot
 
 on:
   schedule:
-    - cron: "0 7 * * *"   # Her gün sabah 07:00 UTC (~Türkiye saati 10:00)
-  workflow_dispatch:        # Elle çalıştırmak için
+    - cron: "0 9 * * *"   # Her gün sabah 09:00'da çalışır (UTC)
+  workflow_dispatch:       # Manuel çalıştırma seçeneği
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Kodları indir
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Python kurulumu
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: '3.11'
 
-      - name: Bağımlılıkları kur
+      - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install requests
 
-      - name: Botu çalıştır
+      - name: Run bot
         run: |
           python bot.py
+
+      - name: Upload debug.json
+        uses: actions/upload-artifact@v3
+        with:
+          name: voyage-debug
+          path: debug.json
+
