--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -1,34 +1,28 @@
-name: Voyage Bot
+name: ETS Voyage Sorgun Bot
 
 on:
   schedule:
-    - cron: "0 9 * * *"   # Her gün sabah 09:00'da çalışır (UTC)
-  workflow_dispatch:       # Manuel çalıştırma seçeneği
+    - cron: "0 7 * * *"   # Her gün sabah 07:00 UTC (~Türkiye saati 10:00)
+  workflow_dispatch:        # Elle çalıştırmak için
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Kodları indir
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Python kurulumu
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.10"
 
-      - name: Install dependencies
+      - name: Bağımlılıkları kur
         run: |
+          python -m pip install --upgrade pip
           pip install requests
 
-      - name: Run bot
+      - name: Botu çalıştır
         run: |
           python bot.py
-
-      - name: Upload debug.json
-        uses: actions/upload-artifact@v3
-        with:
-          name: voyage-debug
-          path: debug.json
-
