--- a/.github/workflows/voyage.yml
+++ b/.github/workflows/voyage.yml
@@ -1,9 +1,9 @@
 name: Voyage Screenshot Bot
 
 on:
-  workflow_dispatch:   # Manuel çalıştırmak için
+  workflow_dispatch:   # Manuel çalıştır
   schedule:
-    - cron: "0 9 * * *"   # Her gün sabah 09:00'da çalışır (UTC)
+    - cron: "0 9 * * *"   # Her gün sabah 09:00'da (UTC) çalıştır
 
 jobs:
   run-bot:
@@ -20,18 +20,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install requests selenium webdriver-manager
-
-      - name: Install Chrome
-        run: |
           sudo apt-get update
-          sudo apt-get install -y unzip xvfb libxi6 libgconf-2-4
-          sudo apt-get install -y google-chrome-stable || true
-          CHROME_DRIVER_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE)
-          wget https://chromedriver.storage.googleapis.com/$CHROME_DRIVER_VERSION/chromedriver_linux64.zip
-          unzip chromedriver_linux64.zip
-          sudo mv chromedriver /usr/local/bin/
-          rm chromedriver_linux64.zip
+          sudo apt-get install -y google-chrome-stable
+          pip install requests selenium webdriver-manager chromedriver-autoinstaller
 
       - name: Run bot
         run: python bot.py
