--- a/.github/workflows/voyage.yml
+++ b/.github/workflows/voyage.yml
@@ -1,9 +1,9 @@
-name: Voyage Screenshot Bot
+name: Voyage Bot
 
 on:
-  workflow_dispatch:   # Manuel çalıştır
+  workflow_dispatch:   # Elle tetikleme
   schedule:
-    - cron: "0 9 * * *"   # Her gün sabah 09:00'da (UTC) çalıştır
+    - cron: "0 7 * * *"   # Her gün sabah 07:00 UTC (Türkiye 10:00)
 
 jobs:
   run-bot:
@@ -19,10 +19,7 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y google-chrome-stable
-          pip install requests selenium webdriver-manager chromedriver-autoinstaller
+        run: pip install requests
 
       - name: Run bot
         run: python bot.py
