--- a/.github/workflows/voyage.yml
+++ b/.github/workflows/voyage.yml
@@ -1,4 +1,4 @@
-name: Voyage Bot
+name: Voyage Bot (Selenium)
 
 on:
   workflow_dispatch:   # Elle tetikleme
@@ -19,7 +19,16 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies
-        run: pip install requests
+        run: |
+          pip install selenium requests
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
+          CHROME_VERSION=$(google-chrome --version | cut -d " " -f3 | cut -d "." -f1)
+          echo "Chrome version: $CHROME_VERSION"
+          wget -q "https://chromedriver.storage.googleapis.com/$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION)/chromedriver_linux64.zip"
+          unzip chromedriver_linux64.zip
+          sudo mv chromedriver /usr/local/bin/
+          rm chromedriver_linux64.zip
 
       - name: Run bot
         run: python bot.py
