--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: Voyage Bot
 
 on:
   schedule:
-    - cron: "0 */6 * * *"   # her 6 saatte bir çalışır
-  workflow_dispatch:         # manuel çalıştırma
+    - cron: "0 */6 * * *"   # her 6 saatte bir
+  workflow_dispatch:
 
 jobs:
   run-bot:
@@ -18,12 +18,14 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install Chrome
+      - name: Install Google Chrome
         run: |
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
           sudo apt-get update
-          sudo apt-get install -y google-chrome-stable
+          sudo apt-get install -y ./google-chrome-stable_current_amd64.deb
+          google-chrome --version
 
-      - name: Install ChromeDriver
+      - name: Install matching ChromeDriver
         run: |
           CHROME_VERSION=$(google-chrome --version | cut -d " " -f3 | cut -d "." -f1)
           echo "Chrome major version: $CHROME_VERSION"
@@ -32,6 +34,7 @@ jobs:
           wget "https://chromedriver.storage.googleapis.com/${DRIVER_VERSION}/chromedriver_linux64.zip"
           unzip chromedriver_linux64.zip -d /usr/local/bin
           rm chromedriver_linux64.zip
+          chromedriver --version
 
       - name: Install Python dependencies
         run: |
