--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,45 +1,26 @@
-name: Voyage Bot
+name: Run Bot
 
 on:
   schedule:
-    - cron: "0 */6 * * *"   # her 6 saatte bir
+    - cron: "0 */6 * * *"   # 6 saatte bir
   workflow_dispatch:
 
 jobs:
-  run-bot:
+  run:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      - name: Install Google Chrome
+      - name: Install dependencies
         run: |
-          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          sudo apt-get update
-          sudo apt-get install -y ./google-chrome-stable_current_amd64.deb
-          google-chrome --version
-
-      - name: Install matching ChromeDriver
-        run: |
-          CHROME_VERSION=$(google-chrome --version | cut -d " " -f3 | cut -d "." -f1)
-          echo "Chrome major version: $CHROME_VERSION"
-          DRIVER_VERSION=$(wget -qO- "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VERSION}")
-          echo "Driver version: $DRIVER_VERSION"
-          wget "https://chromedriver.storage.googleapis.com/${DRIVER_VERSION}/chromedriver_linux64.zip"
-          unzip chromedriver_linux64.zip -d /usr/local/bin
-          rm chromedriver_linux64.zip
-          chromedriver --version
-
-      - name: Install Python dependencies
-        run: |
-          pip install --upgrade pip
           pip install -r requirements.txt
+          playwright install --with-deps chromium
 
       - name: Run bot
         run: python voyage.py
+
