--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -1,25 +1,25 @@
-name: OKX Liquidity Bot
+name: Run Strategy Bot
 
 on:
   schedule:
-    - cron: "0 */4 * * *"   # Her 4 saatte bir çalıştırır
-  workflow_dispatch:        # Manuel olarak da başlatabilirsin
+    - cron: "0 */4 * * *"   # Her 4 saatte bir çalışır (00:00, 04:00, 08:00...)
+  workflow_dispatch:         # Manuel başlatma için
 
 jobs:
-  run-bot:
+  run:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Kod deposunu çek
-        uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-      - name: Python kur
-        uses: actions/setup-python@v5
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: '3.10'
 
-      - name: Gerekli paketleri yükle
-        run: pip install -r requirements.txt
+      - name: Install dependencies
+        run: pip install requests pandas
 
-      - name: Botu çalıştır
-        run: python okx_liquidity_bot.py
+      - name: Run strategy
+        run: python strateji.py
