--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -2,8 +2,8 @@ name: Run Strategy Bot
 
 on:
   schedule:
-    - cron: "0 */4 * * *"   # Her 4 saatte bir çalışır (00:00, 04:00, 08:00...)
-  workflow_dispatch:         # Manuel başlatma için
+    - cron: "0 3,7,11,15,19,23 * * *"   # 03:00, 07:00, 11:00, 15:00, 19:00, 23:00
+  workflow_dispatch:   # Manuel başlatma
 
 jobs:
   run:
