--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -2,8 +2,9 @@ name: Run Strategy Bot
 
 on:
   schedule:
-    - cron: "0 0,4,8,12,16,20 * * *"   # UTC saatleri → Türkiye’de 03:00, 07:00, 11:00, 15:00, 19:00, 23:00
-  workflow_dispatch:   # Manuel tetikleme de kalsın
+    # UTC saatleri → Türkiye'de 03:00, 07:00, 11:00, 15:00, 19:00, 23:00
+    - cron: "0 0,4,8,12,16,20 * * *"
+  workflow_dispatch:  # Manuel tetikleme
 
 jobs:
   run:
@@ -24,7 +25,9 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
-        run: pip install requests pandas
+        run: |
+          pip install --upgrade pip
+          pip install requests pandas
 
       - name: Run strategy
         run: python strateji.py
